chore: add Dockerfiles and production-ready config for Railway deployment
- Dockerfiles for Spring Boot, FastAPI, and React (multi-stage builds)

- Externalized CORS origins, API base URL, all secrets via env vars

- nginx config for React SPA routing

- Updated .env.example with full variable reference